--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file ./sample-packages/docker/Dockerfile --tag my-image-name:$(date +%s)
+    - name: Build and push the Docker image
+      run: |
+        docker build . --file ./sample-packages/docker/Dockerfile --tag my-image-name:$(date +%s)
+        echo $GITHUB_TOKEN | docker login ghcr.io -u USERNAME --password-stdin
+        docker tag IMAGE_ID ghcr.io/OWNER/IMAGE_NAME:latest
+        docker push ghcr.io/OWNER/IMAGE_NAME:latest
