--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,17 +6,32 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: ${{ github.repository }}
+  OWNER: amadub
+
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Build and push the Docker image
       run: |
         docker build . --file ./sample-packages/docker/Dockerfile --tag my-image-name:$(date +%s)
-        echo $GITHUB_TOKEN | docker login ghcr.io -u amadub --password-stdin
         docker tag IMAGE_ID ghcr.io/amadub/my-image-name:latest
         docker push ghcr.io/amadub/my-image-name:latest
+    - name: Log into registry ${{ env.REGISTRY }}
+      uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Build and push Docker image with Buildx (don't push on PR)
+      # https://github.com/docker/build-push-action
+    - name: Build and push Docker image
+      run: |
+        docker tag IMAGE_ID ghcr.io/OWNER/IMAGE_NAME:latest
+        docker push ghcr.io/OWNER/IMAGE_NAME:latest
