--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,9 +19,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build and push the Docker image
       run: |
-        docker build . --file ./sample-packages/docker/Dockerfile --tag my-image-name:$(date +%s)
-        docker tag IMAGE_ID ghcr.io/amadub/my-image-name:latest
-        docker push ghcr.io/amadub/my-image-name:latest
+        docker build . --file ./sample-packages/docker/Dockerfile --tag $IMAGE_NAME:$(date +%s)
+        docker tag IMAGE_ID ghcr.io/$OWNER/$IMAGE_NAME:latest
+        docker push ghcr.io/$OWNER/$IMAGE_NAME:latest
     - name: Log into registry ${{ env.REGISTRY }}
       uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
       with:
@@ -33,5 +33,5 @@ jobs:
       # https://github.com/docker/build-push-action
     - name: Build and push Docker image
       run: |
-        docker tag IMAGE_ID ghcr.io/OWNER/IMAGE_NAME:latest
-        docker push ghcr.io/OWNER/IMAGE_NAME:latest
+        docker tag IMAGE_ID ghcr.io/$OWNER/$IMAGE_NAME:latest
+        docker push ghcr.io/$OWNER/$IMAGE_NAME:latest
