--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,5 +33,5 @@ jobs:
       # https://github.com/docker/build-push-action
     - name: Build and push Docker image
       run: |
-        docker tag IMAGE_ID ghcr.io/$OWNER/$IMAGE_NAME:latest
+        docker tag $IMAGE_NAME:latest ghcr.io/$OWNER/$IMAGE_NAME:latest
         docker push ghcr.io/$OWNER/$IMAGE_NAME:latest
