--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,8 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and push the Docker image
       run: |
+        export TAG=$($IMAGE_NAME:$(date +%s))
+        echo $TAG
         docker build . --file ./sample-packages/docker/Dockerfile --tag $IMAGE_NAME:$(date +%s)
-        docker tag $IMAGE_NAME:latest ghcr.io/$OWNER/$IMAGE_NAME:latest
+        docker tag $TAG ghcr.io/$OWNER/$IMAGE_NAME:latest
         docker push ghcr.io/$OWNER/$IMAGE_NAME:latest
