--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,8 +25,8 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and push the Docker image
       run: |
-        export TAG=$($IMAGE_NAME:$(date +%s))
+        export TAG=$(date +%s)
         echo $TAG
-        #docker build . --file ./sample-packages/docker/Dockerfile --tag $IMAGE_NAME:$(date +%s)
-        #docker tag $TAG ghcr.io/$OWNER/$IMAGE_NAME:latest
-        #docker push ghcr.io/$OWNER/$IMAGE_NAME:latest
+        docker build . --file ./sample-packages/docker/Dockerfile --tag $IMAGE_NAME:$TAG
+        docker tag $IMAGE_NAME:$TAG ghcr.io/$OWNER/$IMAGE_NAME:latest
+        docker push ghcr.io/$OWNER/$IMAGE_NAME:latest
